kube-modl-java-interpreter/kube-modl-java-interpreter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modl-java-interpreter
  name: modl-java-interpreter
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: modl-java-interpreter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: modl-java-interpreter
    spec:
      containers:
        - image: '${trigger[''artifacts''][0][''reference'']}'
          imagePullPolicy: Always
          name: modl-java-interpreter
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 256M
            requests:
              cpu: 150m
              memory: 256M
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: dockerhub-imagepull
