kube-modl-java-interpreter/modl-java-interpreter-deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modl-java-interpreter
  name: modl-java-interpreter
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: modl-java-interpreter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: modl-java-interpreter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
    spec:
      containers:
        - image: '${#stage(''Find Image from Staging'')[''outputs''][''artifacts''][0][''reference'']}'
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 3
          name: modl-java-interpreter
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            limits:
              cpu: 250m
              memory: 256M
            requests:
              cpu: 150m
              memory: 256M
      imagePullSecrets:
        - name: dockerhub-imagepull
