kube-modl-java-interpreter/modl-java-interpreter-svc-ext.prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modl-java-interpreter-external
  name: modl-java-interpreter-external
  namespace: prod
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8080
  selector:
    app: modl-java-interpreter-external
  sessionAffinity: None
  type: LoadBalancer
