kube-modl-java-interpreter/modl-java-interpreter-svc.prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modl-java-interpreter
  name: modl-java-interpreter
  namespace: prod
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: modl-java-interpreter
  sessionAffinity: None
  type: ClusterIP
