kube-modl-java-interpreter/modl-java-interpreter-ingress.prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: modl-java-interpreter-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - interpreter.modl.uk
      secretName: modl-java-interpreter-ssl
  rules:
    - host: interpreter.modl.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: modl-java-interpreter
              servicePort: 8080
