kube-modl-java-interpreter/modl-java-interpreter-ingress.staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: modl-java-interpreter-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - modl.staging.numops.com
      secretName: modl-java-interpreter-ssl
  rules:
    - host: modl.staging.numops.com
      http:
        paths:
          - path: /
            backend:
              serviceName: modl-java-interpreter-external
              servicePort: 8080
