kube-modl-java-interpreter/modl-java-interpreter-ingress.test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: modl-java-interpreter-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - modl.test.numops.com
      secretName: modl-java-interpreter-ssl
  rules:
    - host: modl.test.numops.com
      http:
        paths:
          - path: /
            backend:
              serviceName: modl-java-interpreter
              servicePort: 8080
